[FE] set header overflow hidden to avoid orizontal scrollbar

--- a/fe/static/graphics/css/style.css
+++ b/fe/static/graphics/css/style.css
@@ -718,6 +718,7 @@ div.progressbar span.bar {
   justify-content: center;
   align-items: center;
   background: #003363;
+  overflow: hidden;
 }
 
 .main-header::after {
